--- a/src/app/components/home/home-products/home-products.component.html
+++ b/src/app/components/home/home-products/home-products.component.html
@@ -5,7 +5,7 @@
   >
     <!-- LARGER DISPLAY - SINGLE ROW (not displayed on small screens) -->
     <div class="row mr-0 row-large product-row">
-      <div class="row m-0 height-vp-full-with-header">
+      <div class="row m-0 width-100 height-vp-full-with-header">
         <div class="col-lg product-col first-col">
           <div
             class="product-content height-100 border-col gradient-background"
