--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -51,7 +51,7 @@
                 type="email"
                 name="email"
               />
-              <button class="col-4 btn btn-primary email-button">Go</button>
+              <button class="col-4 btn btn-primary email-button font-weight-bold">Go</button>
             </form>
           </div>
         </div>
