--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -1,3 +1,25 @@
+.select-wrapper select {
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+}
+
+.select-wrapper select {
+  background-image: linear-gradient(45deg, transparent 50%, gray 50%),
+    linear-gradient(135deg, gray 50%, transparent 50%);
+  background-position: calc(100% - 20px) calc(1em + 1px),
+    calc(100% - 15px) calc(1em + 1px), calc(100% - 2.5em) 0.5em;
+  background-size: 7px 4px, 7px 4px;
+  background-repeat: no-repeat;
+}
+
+.select-wrapper select:focus {
+  background-image: linear-gradient(45deg, gray 50%, transparent 50%),
+    linear-gradient(135deg, transparent 50%, gray 50%);
+  background-position: calc(100% - 15px) calc(1em + 1px),
+    calc(100% - 20px) calc(1em + 1px), calc(100% - 2.5em) 0.5em;
+}
+
 .contact-form {
   z-index: 10 !important;
 }
@@ -23,7 +45,7 @@
 
 @media (max-width: 991.9px) {
   .contact-banner-row {
-    flex-direction: column !important;
+    flex-direction: column-reverse !important;
   }
 
   .contact-banner-right {
@@ -35,6 +57,10 @@
     padding-left: 2rem !important;
     padding-top: 5rem;
     padding-bottom: 5rem;
+  }
+
+  .contact-banner-left {
+    padding-right: 2rem !important;
   }
 }
 
@@ -71,3 +97,4 @@
     transparent 50.3%
   );
 }
+
