--- a/src/app/components/products/whitelabel/whitelabel.component.html
+++ b/src/app/components/products/whitelabel/whitelabel.component.html
@@ -2,9 +2,9 @@
   class="container-fluid padding-top-6 padding-bottom-6 padding-left-4 padding-right-4"
 >
   <div class="row justify-content-center margin-bottom-3">
-    <h1 class="font-weight-bold m-0 text-color-primary">
-      White Labelling
-    </h1>
+    <h3 class="text-color-primary font-weight-bold m-0">
+      Rebrand Our Products For Your Own Business
+    </h3>
   </div>
   <div class="row">
     <div class="col">
@@ -16,6 +16,11 @@
     </div>
   </div>
   <div class="row justify-content-center margin-top-3">
+    <h4 class="m-0 text-color-primary">
+      You want to work with us?
+    </h4>
+  </div>
+  <div class="row justify-content-center margin-top-1">
     <a
       type="button"
       routerLink="/contact"
