fixed things (ergonomy) (sizing,mobile spaces etc)

--- a/src/app/components/company/maps/maps.component.html
+++ b/src/app/components/company/maps/maps.component.html
@@ -1,15 +1,15 @@
-<div class="container-fluid padding-3 padding-top-6 padding-bottom-6">
-  <div class="d-flex flex-column justify-content-center align-items-center text-color-primary">
-    <h3 class="font-weight-bold mb-0 text-center">
+<div class="container-fluid maps-container padding-4 padding-top-6 padding-bottom-6 background-color-primary-light">
+  <div class="d-flex flex-column justify-content-center align-items-center">
+    <h3 class="font-weight-bold mb-0 text-center text-color-light">
       Location
     </h3>
-    <h5 class="margin-bottom-3 margin-top-2 padding-right-2 location-text">
+    <h5 class="margin-bottom-3 margin-top-1 location-text text-color-light">
       We're based in Leeds, in the North of the UK and have a presence in the
       United States.
     </h5>
   </div>
-  <div class="row m-0 text-color-primary">
-    <div class="col-sm pl-0">
+  <div class="row m-0 text-color-light">
+    <div class="col-lg px-0">
       <h5 class="font-weight-bold">UK Office</h5>
       <p>
         WIFIPLUG Ltd.<br />
@@ -27,8 +27,9 @@
         ></iframe>
       </div>
     </div>
-    <div class="col flex-grow-0"></div>
-    <div class="col-sm pr-0">
+    <div class="col flex-grow-0 divider-col"></div>
+    <div class="col flex-grow-0 divider-col"></div>
+    <div class="col-lg px-0">
       <h5 class="font-weight-bold">USA Office</h5>
       <p>
         WIFIPLUG Inc.<br />
