--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,198 +1,5 @@
-<div class="container-fluid p-0 min-height-vp-full spacing-0">
-  <div class="row m-0 min-height-vp-full contact-banner-row">
-    <div
-      class="col-lg-7 d-flex flex-column justify-content-center padding-2 padding-right-8 contact-banner-left"
-    >
-      <div class="text-color-primary">
-        <h1 class="font-weight-bold padding-bottom-1">
-          Let's Talk!
-        </h1>
-        <p class="padding-bottom-1">
-          We aim to respond to all queries within two working days - to contact
-          us immediately consider calling.
-        </p>
-      </div>
-      <!-- Contact form -->
-      <form
-        class="contact-form"
-        [formGroup]="contactForm"
-        (ngSubmit)="onSubmit()"
-      >
-        <!-- Name -->
-        <div class="form-group">
-          <label
-            class="text-color-primary font-weight-bold"
-            for="contactNameInput"
-          >
-            Name
-          </label>
-          <input
-            id="contactNameInput"
-            formControlName="contactFormName"
-            type="text"
-            required
-            class="form-control"
-            [ngClass]="{ 'is-invalid': submitted && f.contactFormName.errors }"
-          />
-          <div
-            *ngIf="submitted && f.contactFormName.errors"
-            class="invalid-feedback"
-          >
-            <div *ngIf="f.contactFormName.errors.required">
-              Name is required
-            </div>
-          </div>
-        </div>
-
-        <!-- Email -->
-        <div class="form-group">
-          <label
-            class="text-color-primary font-weight-bold"
-            for="contactEmailInput"
-          >
-            Email address
-          </label>
-          <input
-            id="contactEmailInput"
-            type="email"
-            formControlName="contactFormEmail"
-            required
-            class="form-control"
-            [ngClass]="{ 'is-invalid': submitted && f.contactFormEmail.errors }"
-          />
-          <div
-            *ngIf="submitted && f.contactFormEmail.errors"
-            class="invalid-feedback"
-          >
-            <div *ngIf="f.contactFormEmail.errors.required">
-              Email is required
-            </div>
-            <div *ngIf="f.contactFormEmail.errors.email">
-              Email is not valid
-            </div>
-          </div>
-        </div>
-
-        <!-- Subject -->
-        <div class="form-group">
-          <label
-            class="text-color-primary font-weight-bold"
-            for="contactSubjectInput"
-          >
-            Subject
-          </label>
-          <div class="select-wrapper">
-            <select
-              formControlName="contactFormSubjects"
-              class="form-control"
-              id="contactSubjectInput"
-              required
-              [ngClass]="{
-                'is-invalid': submitted && f.contactFormSubjects.errors
-              }"
-            >
-              <option>Consumer request</option>
-              <option>Manufacturer request</option>
-            </select>
-            <div
-              *ngIf="submitted && f.contactFormSubjects.errors"
-              class="invalid-feedback"
-            >
-              <div *ngIf="f.contactFormSubjects.errors.required">
-                Subject is required
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <label
-            class="text-color-primary font-weight-bold"
-            for="contactMessageInput"
-          >
-            Message
-          </label>
-          <textarea
-            formControlName="contactFormMessage"
-            id="contactMessageInput"
-            class="form-control contact-textarea"
-            required
-            [ngClass]="{
-              'is-invalid': submitted && f.contactFormMessage.errors
-            }"
-          ></textarea>
-          <div
-              *ngIf="submitted && f.contactFormMessage.errors"
-              class="invalid-feedback"
-            >
-              <div *ngIf="f.contactFormMessage.errors.required">
-                Message is required
-              </div>
-            </div>
-        </div>
-
-        <!-- Send button -->
-        <button type="submit" class="btn btn-primary font-weight-bold">
-          Submit
-        </button>
-      </form>
-      <!-- Default form contact -->
-    </div>
-
-    <div
-      class="col-lg-5 padding-right-5 d-flex flex-column contact-banner-right text-center background-color-primary"
-    >
-      <div class="text-color-light">
-        <h1 class="font-weight-bold padding-bottom-1">
-          Get In Touch
-        </h1>
-        <h4 class="padding-bottom-1 text-center">
-          Want to speak to us? <br />
-          Call us on
-          <a class="text-color-light" href="tel:+443333449434"
-            ><u>+44 33 33 44 9434</u></a
-          >
-        </h4>
-
-        <h4 class="text-center">
-          Follow us for all the latest!
-        </h4>
-      </div>
-      <div class="d-flex justify-content-center">
-        <a class="mx-3 network-link" href="https://facebook.com/wifiplug">
-          <img
-            class="network-image"
-            src="assets/images/networks/facebook.png"
-            alt="Facebook icon"
-          />
-        </a>
-        <a
-          class="mx-3 network-link"
-          href="https://linkedin.com/company/wifi-plug-ltd"
-        >
-          <img
-            class="network-image"
-            src="assets/images/networks/linkedin.png"
-            alt="Linkedin icon"
-          />
-        </a>
-        <a class="mx-3 network-link" href="https://www.instagram.com/wifiplug/">
-          <img
-            class="network-image"
-            src="assets/images/networks/instagram.png"
-            alt="Instagram icon"
-          />
-        </a>
-        <a class="mx-3 network-link" href="https://twitter.com/wifiplug">
-          <img
-            class="network-image"
-            src="assets/images/networks/twitter.png"
-            alt="Twitter icon"
-          />
-        </a>
-      </div>
-    </div>
-  </div>
-</div>
+<app-contact-details></app-contact-details>
+<app-contact-form></app-contact-form>
+<app-maps></app-maps>
 
 <app-footer></app-footer>
