--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,9 +4,8 @@
     <div id="products-anchor"></div>
     <app-home-products></app-home-products>
     <div id="home-content">
-      
-      <!--<app-how-it-works></app-how-it-works>-->
       <app-our-offer></app-our-offer>
+      <app-home-worked-with></app-home-worked-with>
     </div>
   </main>
   <app-footer></app-footer>
