--- a/src/app/components/home/our-offer/our-offer.component.html
+++ b/src/app/components/home/our-offer/our-offer.component.html
@@ -1,11 +1,11 @@
 <article id="offer-article" class="margin-bottom-6 background-color-light">
   <div
-    class="padding-left-2 padding-right-2 padding-top-6 padding-bottom-6 text-center"
+    class="padding-left-2 padding-right-2 padding-top-6 text-center"
   >
-    <h3 class="text-color-primary font-weight-bold">
+    <h3 class="font-weight-bold mb-0 text-color-primary">
       Our Solution Is Built For Everyone
     </h3>
-    <h5 class="text-color-secondary m-0">
+    <h5 class="margin-bottom-2 padding-top-1 text-color-secondary">
       myma is designed with consumers and manufacturers in mind.
     </h5>
   </div>
