--- a/src/app/components/products/serviceplug/consumers/consumers-info/consumers-info.component.html
+++ b/src/app/components/products/serviceplug/consumers/consumers-info/consumers-info.component.html
@@ -1,6 +1,6 @@
-<div id="consumers-anchor" class="container padding-top-5 padding-bottom-5">
+<div id="consumers-anchor" class="container consumers-details-container padding-top-5 padding-bottom-5">
   <div class="row m-0">
-    <div *ngFor="let info of infoList" class="col-md-4">
+    <div *ngFor="let info of infoList" class="col-md-4 detail-col">
       <div class="card border-0">
         <div class="card-body">
           <h4 class="card-title text-color-primary">{{ info.title }}</h4>
