--- a/src/app/components/products/serviceplug/consumers/consumers-info/consumers-info.component.scss
+++ b/src/app/components/products/serviceplug/consumers/consumers-info/consumers-info.component.scss
@@ -4,3 +4,15 @@
     max-width: 50% !important;
   }
 }
+
+@media (max-width: 575.9px) {
+  .consumers-details-container {
+    padding-left: 2rem !important;
+    padding-right: 2rem !important;
+  }
+
+  .card-body, .detail-col {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+}
