--- a/src/app/components/products/serviceplug/how-it-works/how-it-works.component.html
+++ b/src/app/components/products/serviceplug/how-it-works/how-it-works.component.html
@@ -1,8 +1,8 @@
 <article id="howItWorks-anchor" class="howItWorks-article border-top-secondary">
   <div
-    class="padding-left-2 padding-right-2 padding-top-5 d-flex justify-content-between align-items-end"
+    class="howItWorks-title padding-left-2 padding-right-2 padding-top-5 d-flex justify-content-between align-items-end"
   >
-    <div class="padding-bottom-1">
+    <div class="padding-bottom-1 title">
       <h3 class="text-color-primary font-weight-bold">How does it work?</h3>
       <h5 class="text-color-secondary">
         Our solution is quite literally, PLUG and play!
