--- a/src/app/components/products/whitelabel/whitelabel.component.html
+++ b/src/app/components/products/whitelabel/whitelabel.component.html
@@ -1,33 +1,58 @@
 <div
-  class="container-fluid padding-top-6 padding-bottom-6 padding-left-4 padding-right-4"
+  class="container-fluid padding-top-6 padding-bottom-6 padding-left-4 padding-right-4 background-color-primary min-height-vp-full"
 >
   <div class="row justify-content-center margin-bottom-3">
-    <h3 class="text-color-primary font-weight-bold m-0">
+    <h3 class="text-color-light text-center font-weight-bold m-0">
       Rebrand Our Products For Your Own Business
     </h3>
   </div>
-  <div class="row">
+  <div class="row banner-large">
     <div class="col">
       <img
         class="img-fluid"
-        src="assets/images/whitelabel/WhitelabellingV3.png"
-        alt="Whitelabelling image"
+        src="assets/images/whitelabel/Whitelabelling_full.png"
+        alt="Whitelabelling image 1"
       />
     </div>
   </div>
-  <div class="row justify-content-center margin-top-3">
-    <h4 class="m-0 text-color-primary">
-      You want to work with us?
-    </h4>
+  <div class="row banner-small text-center">
+    <div class="col-sm">
+      <img
+        class="img-fluid"
+        src="assets/images/whitelabel/Whitelabelling_1.png"
+        alt="Whitelabelling image 1"
+      />
+    </div>
+    <div class="col-sm second-image">
+      <img
+        class="img-fluid"
+        src="assets/images/whitelabel/Whitelabelling_2.png"
+        alt="Whitelabelling image 2"
+      />
+    </div>
+    <div class="col-sm">
+      <img
+        class="img-fluid"
+        src="assets/images/whitelabel/Whitelabelling_3.png"
+        alt="Whitelabelling image 3"
+      />
+    </div>
   </div>
-  <div class="row justify-content-center margin-top-1">
-    <a
-      type="button"
-      routerLink="/contact"
-      class="btn btn-secondary font-weight-bold meet-button"
-    >
-      Start now!
-    </a>
+  <div class="text-center">
+    <div class="margin-top-3">
+      <h4 class="m-0 text-color-light">
+        You want to work with us?
+      </h4>
+    </div>
+    <div class="margin-top-1">
+      <a
+        type="button"
+        routerLink="/contact"
+        class="btn btn-secondary font-weight-bold meet-button"
+      >
+        Start now!
+      </a>
+    </div>
   </div>
 </div>
 
