--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,8 +1,8 @@
 <footer class="border-top-secondary">
-  <div class="container-fluid padding-3 padding-bottom-2">
+  <div class="container-fluid footer-container padding-3 padding-bottom-2">
     <div class="row m-0">
       <div
-        class="col-lg-3 d-flex flex-column text-color-primary-light margin-bottom-1"
+        class="col-lg-3 footer-col d-flex flex-column text-color-primary-light margin-bottom-1"
       >
         <img
           class="myma-logo"
@@ -14,19 +14,19 @@
           like never before.
         </a>
       </div>
-      <div class="col-lg-9 pr-0 row m-0 second-col">
+      <div class="col-lg-9 footer-col pr-0 row m-0 second-col">
         <div
-          class="col-md-4 d-flex flex-column text-color-primary-light margin-bottom-1"
+          class="col-md-4 footer-col d-flex flex-column text-color-primary-light margin-bottom-1"
         >
           <h5 class="font-weight-bold text-color-primary">About Us</h5>
           <a routerLink="/company">What is myma?</a>
-          <a href="/company#team">Meet the team</a>
-          <a href="/company#vacancies">We're hiring</a>
+          <a href="/company#team-anchor">Meet the team</a>
+          <a href="/company#vacancies-anchor">We're hiring</a>
           <a href="/assets/pdf/invest.pdf">Invest in myma</a>
           <a routerLink="/contact">Get in touch</a>
         </div>
         <div
-          class="col-md-4 d-flex flex-column text-color-primary-light margin-bottom-1"
+          class="col-md-4 footer-col d-flex flex-column text-color-primary-light margin-bottom-1"
         >
           <h5 class="font-weight-bold text-color-primary">Products</h5>
           <a href="https://wifiplug.co.uk/">WIFIPLUG</a>
@@ -36,7 +36,7 @@
           <a href="https://developer.wifiplug.io/">Developer documentation</a>
         </div>
         <div
-          class="col-md-4 d-flex flex-column text-color-primary-light margin-bottom-1"
+          class="col-md-4 footer-col d-flex flex-column text-color-primary-light margin-bottom-1"
         >
           <h5 class="font-weight-bold text-color-primary">Stay Up To Date</h5>
           <a>Subscribe to our newsletter for frequent updates.</a>
@@ -51,7 +51,11 @@
                 type="email"
                 name="email"
               />
-              <button class="col-4 btn btn-primary email-button font-weight-bold">Go</button>
+              <button
+                class="col-4 btn btn-primary email-button font-weight-bold"
+              >
+                Go
+              </button>
             </form>
           </div>
         </div>
