--- a/src/assets/css/shared/paddings.scss
+++ b/src/assets/css/shared/paddings.scss
@@ -21,6 +21,21 @@ $spacing: 1rem;
 .padding-5 {
   padding: $spacing * 5 !important;
 }
+.padding-6 {
+  padding: $spacing * 6 !important;
+}
+.padding-7 {
+  padding: $spacing * 7 !important;
+}
+.padding-8 {
+  padding: $spacing * 8 !important;
+}
+.padding-9 {
+  padding: $spacing * 9 !important;
+}
+.padding-10 {
+  padding: $spacing * 10 !important;
+}
 
 // LEFT PADDINGS
 .padding-left-1 {
