--- a/src/app/components/company/maps/maps.component.scss
+++ b/src/app/components/company/maps/maps.component.scss
@@ -11,7 +11,12 @@
 }
 
 @media (max-width: 991.9px) {
-  .maps-div {
+  .maps-container {
     padding-left: 2rem !important;
+    padding-right: 2rem !important;
+  }
+  
+  .divider-col {
+    height: 2rem;
   }
 }
