--- a/src/app/components/company/vacancies/vacancies.component.html
+++ b/src/app/components/company/vacancies/vacancies.component.html
@@ -1,6 +1,6 @@
 <div
-  id="vacancies"
-  class="container-fluid padding-3 padding-bottom-6 padding-top-5 background-color-primary vacancies-div"
+  id="vacancies-anchor"
+  class="container-fluid padding-3 padding-bottom-6 padding-top-6 background-color-primary vacancies-div"
 >
   <div class="row m-0">
     <div class="padding-bottom-2 width-100">
