--- a/src/app/components/products/serviceplug/how-it-works/how-it-works.component.scss
+++ b/src/app/components/products/serviceplug/how-it-works/how-it-works.component.scss
@@ -1,7 +1,3 @@
-.app-image {
-  width: 70%;
-}
-
 .card {
   border: none !important;
   background: none !important;
@@ -32,6 +28,15 @@
   .card-body {
     padding-left: 1rem;
   }
+
+  .howItWorks-title {
+    flex-direction: column;
+  }
+
+  .title {
+    width: 100%;
+    text-align: center;
+  }
 }
 
 .howItWorks-container {
@@ -55,6 +60,10 @@
 }
 
 @media (min-width: 992px) {
+  .app-image {
+    width: 70%;
+  }
+
   .howItWorks-row-breakpoint {
     display: none;
   }
