--- a/src/app/components/shared/footer/footer.component.scss
+++ b/src/app/components/shared/footer/footer.component.scss
@@ -11,15 +11,26 @@ a {
 }
 
 .email-field {
-  border-radius: .5rem 0 0 .5rem !important;
+  border-radius: 0.5rem 0 0 0.5rem !important;
 }
 .email-button {
-  border-radius: 0 .5rem .5rem 0 !important;
+  border-radius: 0 0.5rem 0.5rem 0 !important;
 }
 
 @media (max-width: 767.9px) {
   .second-col {
     flex-direction: column-reverse;
     padding: 0;
+  }
+}
+
+@media (max-width: 991.9px) {
+  .footer-container {
+    padding-left: 2rem !important;
+    padding-right: 2rem !important;
+  }
+
+  .footer-col {
+    padding: 0 !important;
   }
 }
