--- a/src/app/components/utils/tabs/tabs.component.html
+++ b/src/app/components/utils/tabs/tabs.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row m-0 padding-left-1 padding-right-1">
     <div
-      class="col active btn btn-primary font-weight-bold flex-grow-1 tab-button margin-left-1 margin-right-1"
+      class="col active btn btn-primary font-weight-bold flex-grow-1 tab-button margin-top-1 margin-left-1 margin-right-1"
       *ngFor="let tab of tabs"
       (click)="selectTab(tab)"
       [class.inactive]="!tab.active"
